--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="95dea7">  <td>21/06/22 16:08:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DustIdTest.billingdetails()[pri:2, instance:DustIdTest@55536d9e]">billingdetails</td> 
-  <td>main@497208183</td>   <td></td> </tr>
-<tr bgcolor="95dea7">  <td>21/06/22 16:05:25</td>   <td>-177510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DustIdTest.dustId()[pri:1, instance:DustIdTest@55536d9e]">dustId</td> 
-  <td>main@497208183</td>   <td></td> </tr>
-<tr bgcolor="95dea7">  <td>21/06/22 16:05:01</td>   <td>-201669</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DustIdTest.openPage()[pri:0, instance:DustIdTest@55536d9e]">&gt;&gt;openPage</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@497208183</td>   <td></td> </tr>
-<tr bgcolor="a59e97">  <td>21/06/22 16:04:59</td>   <td>-203808</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:DustIdTest@55536d9e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@497208183</td>   <td></td> </tr>
-<tr bgcolor="95dea7">  <td>21/06/22 16:08:33</td>   <td>10867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DustIdTest.shippingDetails()[pri:3, instance:DustIdTest@55536d9e]">shippingDetails</td> 
-  <td>main@497208183</td>   <td></td> </tr>
+<tr bgcolor="68aa7e">  <td>21/06/24 19:54:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JumboCardOrderFlowTest.addProductsToCart()[pri:1, instance:JumboCardOrderFlowTest@2af004b]">addProductsToCart</td> 
+  <td>main@1158676965</td>   <td></td> </tr>
+<tr bgcolor="68aa7e">  <td>21/06/24 19:54:40</td>   <td>36314</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JumboCardOrderFlowTest.billingDetails()[pri:2, instance:JumboCardOrderFlowTest@2af004b]">billingDetails</td> 
+  <td>main@1158676965</td>   <td></td> </tr>
+<tr bgcolor="68aa7e">  <td>21/06/24 19:53:54</td>   <td>-9792</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;JumboCardOrderFlowTest.openPage()[pri:0, instance:JumboCardOrderFlowTest@2af004b]">&gt;&gt;openPage</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1158676965</td>   <td></td> </tr>
+<tr bgcolor="cdfb9b">  <td>21/06/24 19:53:47</td>   <td>-15840</td> <td title="&gt;&gt;TestBase.screenRecording()[pri:0, instance:JumboCardOrderFlowTest@2af004b]">&gt;&gt;screenRecording</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1158676965</td>   <td></td> </tr>
+<tr bgcolor="cdfb9b">  <td>21/06/24 19:53:48</td>   <td>-15704</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:JumboCardOrderFlowTest@2af004b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1158676965</td>   <td></td> </tr>
+<tr bgcolor="68aa7e">  <td>21/06/24 19:54:47</td>   <td>44089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JumboCardOrderFlowTest.shippingDetails()[pri:3, instance:JumboCardOrderFlowTest@2af004b]">shippingDetails</td> 
+  <td>main@1158676965</td>   <td></td> </tr>
+<tr bgcolor="cdfb9b">  <td>21/06/24 19:55:02</td>   <td>59087</td> <td title="&lt;&lt;TestBase.stopRecording()[pri:0, instance:JumboCardOrderFlowTest@2af004b]">&lt;&lt;stopRecording</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1158676965</td>   <td></td> </tr>
+<tr bgcolor="cdfb9b">  <td>21/06/24 19:55:01</td>   <td>58131</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:JumboCardOrderFlowTest@2af004b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1158676965</td>   <td></td> </tr>
 </table>
